2000-05-25  Petr Mikulik <mikulik@physics.muni.cz>
	* pm3d: unset.c: #ifdef X11 .. #endif missing in unset_pm3d()

2000-05-24  Lars Hecking  <lhecking@nmrc.ie>

	* configure.in: configure should always exit with an exit code
	of zero.

2000-05-16  Petr Mikulik <mikulik@physics.muni.cz>
	* pm3d/contrib: updated pm3dConvertToImage.awk to support colour images

2000-05-11  Petr Mikulik <mikulik@physics.muni.cz>
	* pm3d/contrib: added pm3dConvertToImage.awk

2000-05-09  Petr Mikulik <mikulik@physics.muni.cz>
	* pm3d: three new color mapping formulae 34--36: 2x,2x-0.5,2x-1

2000-05-04  Johannes Zellner <johannes@zellner.org>

	* reimplemented the Linux vgagl terminal driver with
	mouse and pm3d support (uses the lib3dkit library)

2000-05-04  Johannes Zellner <johannes@zellner.org>

	* configure.in, src/plot.c, src/parse.c: replace setjmp by
	sigsetjmp and longjmp by siglongjmp if these functions
	(or macros) are available.

2000-05-04  Johannes Zellner <johannes@zellner.org>

	* src/command.c: always include ipc.h

	* term/linux.trm: typedef int in declaration of linux_line_func_ptr

	* term/x11.trm: added a few ifdef USE_MOUSE's to exclude mouse
	code, if compiling w/o mouse support.

2000-05-03  Johannes Zellner <johannes@zellner.org>

	* merged pre-pm3d - pre-pm3d-01 from the MAIN trunk.

2000-05-02  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: In "Platform notes" section, add hint for using
	'gcc -ansi'.

	* Makefile.am: Add maintainer-only pre-dist target.

	* docs/Makefile.in: Don't hardcode pdflatex command.

	* docs/doc2texi.el: Add missing drivers.

	* docs/gnuplot.doc: Remove docs for comma line continuation.

	* src/*.h: Uniform RCS id header.

	* src/command.c, src/mics.c: Clean up, add comments, remove ESR's
	comma line continuation patch (doesn't work).

	* src/dynarray.c, src/tables.c: Add RCSid.

	* src/dynarray.h, src/ipc.h, src/mousecnm.h: Add gnuplot copyright
	statement, RCS id.

	* src/gp_hist.h, src/gp_time.h, src/history.c, src/time.c: Fix