@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.40.2.3 2000/05/09 17:52:53 mikulik Exp $
+C RCS $Id: gnuplot.doc,v 1.40.2.4 2000/05/25 07:35:09 mikulik Exp $
 C 3 December 1998
 C Copyright (C) 1986 - 1993, 1998   Thomas Williams, Colin Kelley
 C
@@ -5370,7 +5370,7 @@ C ... and restart the table:
 
  Colour palettes, or requires terminal entries for filled colour 
  polygons and palettes of smooth colours, are currently available for
-       `***  fig, gif, pm, postscript, linux vgagl and x11  ***`
+    `***  fig, gif, pm, postscript, pslatex, pstex, linux vgagl and x11  ***`
  terminals. You are welcome to implement it for other terminals, e.g. png.
 
 
