@@ -19,6 +19,7 @@ supported terminals are:
 	X11
 	Linux VGA
 	PostScript
+	pslatex, pstex
 	GIF
 	Xfig
 
