@@ -1,5 +1,5 @@
 /*
- * $Id: pslatex.trm,v 1.27 2000/03/30 14:08:21 lhecking Exp $
+ * $Id: pslatex.trm,v 1.27.2.1 2000/05/25 07:37:00 mikulik Exp $
  */
 
 /* GNUPLOT - pslatex.trm */
@@ -46,6 +46,8 @@
  *  Russell Lang
  *  David Kotz
  * 
+ *  Petr Mikulik, May 2000: terminal entries for PM3D functionality
+ *
  * send your comments or suggestions to (info-gnuplot@dartmouth.edu).
  */
 
@@ -71,6 +73,12 @@ TERM_PUBLIC void PSLATEX_linetype __PROTO((int lt));
 TERM_PUBLIC void PSLATEX_point __PROTO((unsigned int x, unsigned int y, int number));
 TERM_PUBLIC void PSLATEX_pointsize __PROTO((double size));
 TERM_PUBLIC void PSLATEX_linewidth __PROTO((double width));
+#ifdef PM3D
+TERM_PUBLIC int PSLATEX_make_palette (t_sm_palette *);
+TERM_PUBLIC void PSLATEX_previous_palette (void);
+TERM_PUBLIC void PSLATEX_set_color (double);
+TERM_PUBLIC void PSLATEX_filled_polygon (int, gpiPoint *);
+#endif
 
 #define PSLATEX_XMAX (5*720)
 #define PSLATEX_YMAX (3*720)
@@ -580,6 +588,52 @@ double ps;
 	PS_linewidth(ps);
 }
 
+#ifdef PM3D
+
+TERM_PUBLIC int PSLATEX_make_palette (t_sm_palette *palette)
+{
+    if (PSLATEX_auxfile)
+	return 0;
+    return PS_make_palette(palette);
+}
+
+TERM_PUBLIC void PSLATEX_set_color (double gray)
+{
+    if (PSLATEX_auxfile) {
+	FILE *tmp = gpoutfile;
+	gpoutfile = PSLATEX_auxfile;
+	PS_set_color(gray);
+	gpoutfile = tmp;
+    } else
+	PS_set_color(gray);
+}
+
+TERM_PUBLIC void PSLATEX_filled_polygon ( int points, gpiPoint *corners )
+{
+    if (PSLATEX_auxfile) {
+	FILE *tmp = gpoutfile;
+	gpoutfile = PSLATEX_auxfile;
+	PS_filled_polygon(points,corners);
+	gpoutfile = tmp;
+    } else
+	PS_filled_polygon(points,corners);
+}
+
+TERM_PUBLIC void PSLATEX_previous_palette ( void )
+{
+#if 0
+    if (PSLATEX_auxfile) {
+	FILE *tmp = gpoutfile;
+	gpoutfile = PSLATEX_auxfile;
+	PS_previous_palette();
+	gpoutfile = tmp;
+    } else
+#endif
+	PS_previous_palette();
+}
+
+#endif /* PM3D */
+
 #endif /* TERM_BODY */
 
 #ifdef TERM_TABLE
@@ -600,6 +654,15 @@ TERM_TABLE_START(pslatex_driver)
     PSLATEX_pointsize, 0 /*flags */ , 0 /*suspend */
     , 0 /*resume */ , 0 /*fillbox */ ,
     PSLATEX_linewidth
+#ifdef PM3D
+#ifdef USE_MOUSE
+   , 0, 0, 0, 0, 0 /* no mouse support for postscript */
+#endif
+   , PSLATEX_make_palette,
+   PSLATEX_previous_palette, /* write grestore */
+   PSLATEX_set_color,
+   PSLATEX_filled_polygon
+#endif
 TERM_TABLE_END(pslatex_driver)
 #undef LAST_TERM
 #define LAST_TERM pslatex_driver
@@ -614,6 +677,15 @@ TERM_TABLE_START(pstex_driver)
     PSLATEX_pointsize, 0 /*flags */ , 0 /*suspend */
     , 0 /*resume */ , 0 /*fillbox */ ,
     PSLATEX_linewidth
+#ifdef PM3D
+#ifdef USE_MOUSE
+   , 0, 0, 0, 0, 0 /* no mouse support for postscript */
+#endif
+   , PSLATEX_make_palette,
+   PSLATEX_previous_palette, /* write grestore */
+   PSLATEX_set_color,
+   PSLATEX_filled_polygon
+#endif
 TERM_TABLE_END(pstex_driver)
 #undef LAST_TERM
 #define LAST_TERM pstex_driver
