@@ -1,4 +1,7 @@
 2000-05-25  Petr Mikulik <mikulik@physics.muni.cz>
+	* pm3d: support for pm3d functionality in 'pslatex / pstex' terminals
+
+2000-05-25  Petr Mikulik <mikulik@physics.muni.cz>
 	* pm3d: unset.c: #ifdef X11 .. #endif missing in unset_pm3d()
 
 2000-05-24  Lars Hecking  <lhecking@nmrc.ie>
